# maintchain

./: .gitignore  Dockerfile  Freighter.js  PROJECT_GUIDE.md  README.md  STELLAR_INTEGRATION.md  SYSTEM_DESIGN.md  SYSTEM_DESIGN_DIAGRAM.html  render.yaml  tmp_equipment_payload.json
.freebuff/: desktop.db-shm  desktop.db-wal
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Cargo.toml
backend/migrations/: 0001_init.sql  0002_blockchain_integration.sql  0003_equipment_fields.sql  0004_user_roles.sql
backend/src/: audit.rs  auth.rs  complaint.rs  main.rs  seed.rs  seed_main.rs  soroban_client.rs  storage.rs  tx_log.rs
contracts/: Cargo.toml  README.md
contracts/compliance-attestation/: Cargo.toml
contracts/compliance-attestation/src/: lib.rs
contracts/equipment-registry/: Cargo.toml
contracts/equipment-registry/src/: lib.rs
contracts/maintenance-records/: Cargo.toml
contracts/maintenance-records/src/: lib.rs
contracts/multi-party-approval/: Cargo.toml
contracts/multi-party-approval/src/: lib.rs
docs/: ONBOARDING.md  STELLAR_TRANSACTION_FLOW_ANALYSIS.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: global.d.ts  instrumentation.ts
infra/: docker-compose.yml
migrations/: 0005_transaction_log.sql  0006_challenge_nonces.sql
scripts/: deploy-contracts.mjs  soroban-invoke.mjs  test-integration.mjs  test-setup.mjs
stellar-connect-wallet/: package-lock.json  package.json
(+64 files in other folders)
