[package]
name = "maintchain-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

anyhow = "1"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"

# DB
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Soroban SDK for on-chain integration
soroban-sdk = { version = "21" }
stellar-xdr = { version = "21", features = ["std"] }
stellar-rpc-client = { version = "21" }


[build-dependencies]
soroban-sdk = { version = "21" } # For building contracts locally

